<resources>
    <string name="app_name">SNS Upload App</string>
    <string name="home">홈</string>
    <string name="my_info">나의 정보</string>
    <string name="chatting">채팅</string>
    <string name="title">피드 목록</string>
    <string name="add_feed">피드 등록</string>
    <string name="submit">등록 하기</string>
    <string name="feed_content">피드 내용</string>
    <string name="feed_title">피드 제목</string>
    <string name="image_submit">이미지 등록하기</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_in">로그인</string>
    <string name="sign_out">로그아웃</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="chat_list">채팅방 리스트</string>
    <string name="send">전송</string>
    <string name="text_input">입력창</string>

    <!-- Photo -->
    <string name="image_preview">이미지 미리보기</string>
    <string name="flash">플래시</string>
    <string name="delete">삭제</string>
    <string name="images_page">(%d/%d)</string>
    <string name="confirm">확인</string>
</resources>